fix(m8): 验收缺陷修复——会话分脑/计划呈交卡/回放并发 + Web 单页重构
- /api/session/switch 换绑后经会话变更回调重建 agent，分脑根治（消息落旧会话、页面看新会话，BUG-20260914-01）
- exit_plan_mode 渲染为计划呈交卡，批准/打回答案口径对齐工具判定；ask_user 结果冻结提问卡——工单 05 提问/计划卡片欠账收口（BUG-20260914-02）
- Session.events() 改快照语义：流式追加期间并发回放不再 CME
- SSE 连接帧改真注释帧、恢复 replay/done 边界帧；客户端 onopen 复位回放门（重连幂等）
- AuditingAnswerer 提升 agent 模块（会话 Supplier 化），CLI/Web 装配共用审计桥
- index.html 整页重构：三区布局对齐冻结原型（侧栏列出/切换/高亮 + EmptyHero + 交互卡事件委托）
- BUG-20260914-01/02 档案、工单 05/06 实测记档、CHANGELOG Fixed 段、验收截图归档 .scratch/m8-web/screenshots/